<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_settings">Setting</string>

    <string name="add_to_favourite">Add to favourite</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="cloudy">Cloudy</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="added_to_favourite">Added to favourite</string>
    <string name="city_not_found">City not found</string>
    <string name="setting_change_language">Change Language</string>

</resources>